# fastapi-template-v2

./: .coveragerc  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Dockerfile.dev  MANIFEST.in  Makefile  README.md  docker-compose-dev.yaml  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
.github/backup/: setup.py
backend/: app.py  cli.py  config.py  security.py
backend/models/: content.py
backend/routes/: content.py
fastapi_template_v2/: app.py  cli.py  config.py  security.py
fastapi_template_v2/models/: content.py
tests/: conftest.py
