[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["rochacbruno"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
sqlmodel = "^0.0.8"
typer = "^0.6.1"
dynaconf = "^3.1.9"
Jinja2 = "^3.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
psycopg2-binary = "^2.9.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = "^6.4.4"
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"
mypy = "^0.971"
gitchangelog = "^3.0.4"
mkdocs = "^1.3.1"
pytest-picked = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
backend = 'backend.__main__:main'
